Bug 111641 - [CI][BAT] igt@runner@aborted - fail - WARN_ON_ONCE(!crtc_clock || max_dotclk < crtc_clock)
Summary: [CI][BAT] igt@runner@aborted - fail - WARN_ON_ONCE(!crtc_clock || max_dotclk ...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: highest not set
Assignee: Matt Roper
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-11 06:29 UTC by Martin Peres
Modified: 2019-10-16 10:52 UTC (History)
2 users (show)

See Also:
i915 platform: TGL
i915 features: display/Other


Attachments

Description Martin Peres 2019-09-11 06:29:14 UTC
http://gfx-ci.fi.intel.com/tree/drm-tip/CI_DRM_6864/fi-tgl-u/boot.html

<7>[   11.970731] [drm:intel_alloc_initial_plane_obj.isra.123 [i915]] initial plane fb obj 0000000074bc2b2e
<4>[   11.971445] ------------[ cut here ]------------
<4>[   11.971449] WARN_ON_ONCE(!crtc_clock || max_dotclk < crtc_clock)
<4>[   11.971515] WARNING: CPU: 6 PID: 331 at drivers/gpu/drm/i915/display/intel_display.c:14556 skl_max_scale+0xa4/0xb0 [i915]
<4>[   11.971517] Modules linked in: i915(+) mei_hdcp x86_pkg_temp_thermal coretemp ax88179_178a(+) usbnet mii crct10dif_pclmul crc32_pclmul ghash_clmulni_intel mei_me mei prime_numbers
<4>[   11.971531] CPU: 6 PID: 331 Comm: systemd-udevd Not tainted 5.3.0-rc8-CI-CI_DRM_6864+ #1
<4>[   11.971533] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2321.A01.1908052106 08/05/2019
<4>[   11.971575] RIP: 0010:skl_max_scale+0xa4/0xb0 [i915]
<4>[   11.971576] Code: e5 5c 19 00 00 b8 00 00 01 00 75 de 48 c7 c6 f0 7e 29 a0 48 c7 c7 db 91 2b a0 89 44 24 04 c6 05 c5 5c 19 00 01 e8 2c b3 ef e0 <0f> 0b 8b 44 24 04 eb b8 0f 1f 40 00 41 54 55 49 89 f4 53 48 8b 2f
<4>[   11.971578] RSP: 0018:ffffc9000047f718 EFLAGS: 00010286
<4>[   11.971579] RAX: 0000000000000000 RBX: 0000000000054600 RCX: 0000000000000006
<4>[   11.971581] RDX: 00000000000016a3 RSI: ffff888495638918 RDI: ffffffff82136b39
<4>[   11.971582] RBP: 000000000005835d R08: ffff888495638918 R09: 0000000000000000
<4>[   11.971583] R10: 000000003b9aca00 R11: 0000000000000000 R12: 0000000000000000
<4>[   11.971584] R13: ffff88848dc567e8 R14: ffff88848d030000 R15: ffffffffa025cc60
<4>[   11.971586] FS:  00007f1cc817c680(0000) GS:ffff8884a0700000(0000) knlGS:0000000000000000
<4>[   11.971587] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>[   11.971589] CR2: 00007fb4c4682ab0 CR3: 000000049563c003 CR4: 0000000000760ee0
<4>[   11.971590] PKRU: 55555554
<4>[   11.971591] Call Trace:
<4>[   11.971640]  skl_plane_check+0x111/0x3b0 [i915]
<4>[   11.971684]  ? intel_crtc_duplicate_state+0x1b/0x80 [i915]
<4>[   11.971687]  ? stack_trace_save+0x46/0x70
<4>[   11.971731]  intel_plane_atomic_check_with_state+0x9b/0x1f0 [i915]
<4>[   11.971737]  drm_atomic_helper_check_planes+0xed/0x220
<4>[   11.971782]  intel_atomic_check+0x873/0x1520 [i915]
<4>[   11.971824]  ? intel_crtc_duplicate_state+0x1b/0x80 [i915]
<4>[   11.971834]  ? mark_held_locks+0x49/0x70
<4>[   11.971840]  ? __slab_alloc.isra.28.constprop.33+0x4d/0x70
<4>[   11.971845]  drm_atomic_check_only+0x56a/0x830
<4>[   11.971850]  drm_atomic_commit+0xe/0x50
<4>[   11.971947]  intel_initial_commit+0xae/0x130 [i915]
<4>[   11.972006]  intel_modeset_init+0xa2a/0x1aa0 [i915]
<4>[   11.972047]  i915_driver_probe+0xb6f/0x15e0 [i915]
<4>[   11.972054]  ? printk+0x4d/0x69
<4>[   11.972096]  i915_pci_probe+0x43/0x1b0 [i915]
<4>[   11.972099]  ? _raw_spin_unlock_irqrestore+0x39/0x60
<4>[   11.972105]  pci_device_probe+0x9e/0x120
<4>[   11.972110]  really_probe+0xea/0x3d0
<4>[   11.972115]  driver_probe_device+0x10b/0x120
<4>[   11.972119]  device_driver_attach+0x4a/0x50
<4>[   11.972124]  __driver_attach+0x97/0x130
<4>[   11.972128]  ? device_driver_attach+0x50/0x50
<4>[   11.972130]  bus_for_each_dev+0x74/0xc0
<4>[   11.972134]  bus_add_driver+0x13f/0x210
<4>[   11.972136]  ? 0xffffffffa03cb000
<4>[   11.972138]  driver_register+0x56/0xe0
<4>[   11.972140]  ? 0xffffffffa03cb000
<4>[   11.972143]  do_one_initcall+0x58/0x300
<4>[   11.972145]  ? do_init_module+0x1d/0x1f6
<4>[   11.972148]  ? rcu_read_lock_sched_held+0x6f/0x80
<4>[   11.972150]  ? kmem_cache_alloc_trace+0x2d1/0x300
<4>[   11.972154]  do_init_module+0x56/0x1f6
<4>[   11.972157]  load_module+0x25bd/0x2a40
<4>[   11.972176]  ? __se_sys_finit_module+0xd3/0xf0
<4>[   11.972179]  __se_sys_finit_module+0xd3/0xf0
<4>[   11.972188]  do_syscall_64+0x55/0x1c0
<4>[   11.972191]  entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4>[   11.972192] RIP: 0033:0x7f1cc7c9d839
<4>[   11.972195] Code: 00 f3 c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 1f f6 2c 00 f7 d8 64 89 01 48
<4>[   11.972196] RSP: 002b:00007ffcd1b0c158 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
<4>[   11.972198] RAX: ffffffffffffffda RBX: 000055fde9e23950 RCX: 00007f1cc7c9d839
<4>[   11.972199] RDX: 0000000000000000 RSI: 00007f1cc797c145 RDI: 000000000000000f
<4>[   11.972200] RBP: 00007f1cc797c145 R08: 0000000000000000 R09: 00007ffcd1b0c270
<4>[   11.972202] R10: 000000000000000f R11: 0000000000000246 R12: 0000000000000000
<4>[   11.972203] R13: 000055fde9e16400 R14: 0000000000020000 R15: 000055fde9e23950
<4>[   11.972210] irq event stamp: 570894
<4>[   11.972214] hardirqs last  enabled at (570893): [<ffffffff8112d24c>] vprintk_emit+0xcc/0x340
<4>[   11.972216] hardirqs last disabled at (570894): [<ffffffff81001a8a>] trace_hardirqs_off_thunk+0x1a/0x20
<4>[   11.972220] softirqs last  enabled at (570746): [<ffffffff81c0033e>] __do_softirq+0x33e/0x4ae
<4>[   11.972223] softirqs last disabled at (570739): [<ffffffff810b8279>] irq_exit+0xa9/0xc0
<4>[   11.972270] WARNING: CPU: 6 PID: 331 at drivers/gpu/drm/i915/display/intel_display.c:14556 skl_max_scale+0xa4/0xb0 [i915]
<4>[   11.972272] ---[ end trace 5a4cbb9daad0de4c ]---

http://gfx-ci.fi.intel.com/tree/drm-tip/CI_DRM_6864/fi-tgl-u/igt%40runner%40aborted.html

Aborting.
Previous test: nothing
Next test: core_auth (basic-auth)

Kernel badly tainted (0x200) (check dmesg for details):
	(0x200) TAINT_WARN: WARN_ON has happened.

This is an escape from CI because it looks exactly like https://bugs.freedesktop.org/show_bug.cgi?id=111428.
Comment 1 Martin Peres 2019-09-11 06:32:41 UTC
Please revert the patch that caused the regression, we cannot wait for it to be reworked (unless the fix is equally trivial).
Comment 2 Jani Saarinen 2019-09-11 06:36:46 UTC
assign to Matt. cc Jani
Comment 4 Ville Syrjala 2019-09-11 12:03:19 UTC
<7>[   11.800820] [drm:intel_dump_cdclk_state [i915]] Current CDCLK 652800 kHz, VCO 1305600 kHz, ref 38400 kHz, bypass 0 kHz, voltage level 2
<7>[   11.800874] [drm:intel_cdclk_init [i915]] Sanitizing cdclk programmed by pre-os
...
<7>[   11.810095] [drm:intel_dump_cdclk_state [i915]] Current CDCLK 172800 kHz, VCO 345600 kHz, ref 38400 kHz, bypass 19200 kHz, voltage level 0
...
<7>[   11.888951] [drm:drm_mode_debug_printmodeline] Modeline "3200x1800": 60 361309 3200 3248 3280 3316 1800 1802 1807 1816 0x40 0xa
...
<4>[   11.891968] WARN_ON_ONCE(!crtc_clock || max_dotclk < crtc_clock)

So the problem is that we sanitize the cdclk even though it's supposedly in active use. Need to figure out why the code thinks the sanitation is necessary.
Comment 5 Jani Saarinen 2019-09-11 18:59:55 UTC
Ville's patches: https://patchwork.freedesktop.org/series/66537/ and again TGL starts testing..
Comment 6 Jani Saarinen 2019-09-12 13:43:09 UTC
Now merged on CI_DRM_6876:
e16d0caca5c3 drm-tip: 2019y-09m-12d-09h-43m-42s UTC integration manifest
933122cc7cd2 drm/i915: Remove duplicated bxt/cnl/icl .modeset_calc_cdclk() funcs
502d1c04f53c drm/i915: Reuse cnl_modeset_calc_cdclk() on icl+
0a12e4370497 drm/i915: Fix CD2X pipe select masking during cdclk sanitation
74689ddfb757 drm/i915: Fix cdclk bypass freq readout for tgl/bxt/glk
05b5eaaa5a67 drm-tip: 2019y-09m-12d-07h-50m-16s UTC integration manifest
Comment 7 Martin Peres 2019-10-16 10:49:41 UTC
(In reply to Jani Saarinen from comment #6)
> Now merged on CI_DRM_6876:
> e16d0caca5c3 drm-tip: 2019y-09m-12d-09h-43m-42s UTC integration manifest
> 933122cc7cd2 drm/i915: Remove duplicated bxt/cnl/icl .modeset_calc_cdclk()
> funcs
> 502d1c04f53c drm/i915: Reuse cnl_modeset_calc_cdclk() on icl+
> 0a12e4370497 drm/i915: Fix CD2X pipe select masking during cdclk sanitation
> 74689ddfb757 drm/i915: Fix cdclk bypass freq readout for tgl/bxt/glk
> 05b5eaaa5a67 drm-tip: 2019y-09m-12d-07h-50m-16s UTC integration manifest

Looks good, thanks!
Comment 8 CI Bug Log 2019-10-16 10:52:50 UTC
The CI Bug Log issue associated to this bug has been archived.

New failures matching the above filters will not be associated to this bug anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.